Revert "used maven formatter:format"
This reverts commit 64b76d71ff58b2c232cb56a90c0485f62794147f.